# subjectid-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: gh-pages.yml
design/: 01-enum.md  02-formatter.md
docs/design/: 01-enum.md  02-formatter.md  03-aliases.md
src/: e164.rs  error.rs  lib.rs  single.rs
