[package]
name = "subjectid"
version = "0.2.0"
edition = "2021"
description = "Implementation of Subject Identifiers for Security Event Tokens"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
